[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Font/Gamer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/image/backpage.png" type="Texture" id=2]
[ext_resource path="res://scripts/shop.gd" type="Script" id=3]
[ext_resource path="res://assets/image/shopframe.png" type="Texture" id=4]
[ext_resource path="res://assets/image/exitshop.png" type="Texture" id=5]
[ext_resource path="res://assets/image/buydamage.png" type="Texture" id=6]
[ext_resource path="res://assets/image/shopdamage.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/click.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/image/coin.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="shop2" type="Node2D"]
script = ExtResource( 3 )

[node name="shopframe2" type="Sprite" parent="."]
position = Vector2( 360, 535 )
scale = Vector2( 7, 7.6 )
texture = ExtResource( 4 )

[node name="exit2" type="TextureButton" parent="."]
margin_left = 250.0
margin_top = 900.0
margin_right = 350.0
margin_bottom = 960.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="exit2"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 20.0
margin_top = 6.727
margin_right = 80.0
margin_bottom = 44.727
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "exit"

[node name="lessloss" type="TextureButton" parent="."]
margin_left = 110.0
margin_top = 80.0
margin_right = 150.0
margin_bottom = 120.0
rect_scale = Vector2( 2, 2 )
toggle_mode = true
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buydlessloss" type="TextureButton" parent="lessloss"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 170.0
texture_normal = ExtResource( 6 )

[node name="moretime" type="TextureButton" parent="."]
margin_left = 380.0
margin_top = 80.0
margin_right = 500.0
margin_bottom = 200.0
rect_scale = Vector2( 2, 2 )
toggle_mode = true
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buymoretime" type="TextureButton" parent="moretime"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 170.0
texture_normal = ExtResource( 6 )

[node name="startlevel" type="TextureButton" parent="."]
margin_left = 110.0
margin_top = 440.0
margin_right = 230.0
margin_bottom = 560.0
rect_scale = Vector2( 2, 2 )
toggle_mode = true
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buystartlevel" type="TextureButton" parent="startlevel"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 170.0
texture_normal = ExtResource( 6 )

[node name="backpage" type="TextureButton" parent="."]
margin_left = 500.0
margin_top = 810.0
margin_right = 540.0
margin_bottom = 850.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy" type="Label" parent="."]
margin_left = 179.0
margin_top = 300.0
margin_right = 233.0
margin_bottom = 338.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Buy"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy2" type="Label" parent="buy"]
margin_left = 135.5
margin_right = 192.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Buy"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy3" type="Label" parent="buy"]
margin_left = 0.500008
margin_top = 180.0
margin_right = 57.5
margin_bottom = 218.0
custom_fonts/font = SubResource( 2 )
text = "Buy"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Coins" type="Sprite" parent="."]
position = Vector2( 310, 850 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Coins"]
margin_left = 41.0
margin_top = -34.0
margin_right = 81.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="exit2" to="." method="_on_exit2_button_down"]
[connection signal="pressed" from="lessloss" to="." method="_on_lessloss_pressed"]
[connection signal="pressed" from="moretime" to="." method="_on_moretime_pressed"]
[connection signal="pressed" from="startlevel" to="." method="_on_startlevel_pressed"]
[connection signal="button_down" from="backpage" to="." method="_on_backpage_button_down"]
